kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mon-deploiement
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mon-app
  template:
    metadata:
      labels:
        app: mon-app
    spec:
      containers:
        - name: mon-container
          image: mon-image:v1
          ports:
            - containerPort: 8080
